# XO80

./: CMakeLists.txt  README.md  test입니다 - 복사본 - 복사본.txt
project/automotive_display/: CMakeLists.txt  Kconfig  Kconfig.win32  audio.c  btapp_gatts.c  config.c  ctrlboard.h  external.c  function_table.c  layer.cmake  layer_backup_camera.c  layer_dashboard_cam.c  layer_digital_type.c  layer_light.c  layer_main.c  layer_opening.c  layer_project.c  layer_seat.c  layer_setting.c  layer_surveillance.c  layer_top.c  layer_window.c  main.c  network_config.h  network_func.c  network_main.c  network_wifi.c  nework_mirror.c  scene.c  scene.h  screen.c  video_file_process.c
project/test_audio/: CMakeLists.txt  Kconfig  test_audio.docx
project/test_audio/audioFlow/: test_document.docx  test_flower_analogspk.c  test_flower_asr.c  test_flower_louder.c  test_flower_louder_mix.c  test_flower_mix.c  test_flower_mix_with_mp3.c  test_flower_play.c  test_flower_resample_play.c  test_flower_resample_play_with_asr.c  test_flower_stream.c  test_flower_usbrec.c
project/test_audio/audioFlow/sdl/: main_processor_message_queue.c
project/test_audio/audioHWctrl/: gwavhead.c  test_main_louder.c  test_main_pcmplay.c  test_main_simple.c  test_main_usb_play.c  test_main_usb_record.c  test_main_usb_record_pdm.c  wavheader.h
project/test_audio/audioMgr/: test_main_audiomgr.c
project/test_audio/audio_called/: config.h  network.c  test_leaf_called.c
project/test_audio/audio_calling/: CMakeLists.txt  Kconfig  network.c  test_leaf_calling.c
project/test_canbus/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_978_CARHMI  TestCanbus.docx  test_canbus.c
project/test_cap/: CMakeLists.txt  CaptureToolIntroduction.docx  Kconfig  Kconfig.win32  Kconfig_EVB_977_hdmirx  Test_cap.docx  test_delaywindows.c  test_hdmirx.c  test_itv.c  test_modules.c
project/test_ecm/: 4G.docx  4G.ngpl.docx  CMakeLists.txt  Kconfig.Air720SL  Kconfig.Air720SL.ngpl  Kconfig.L610  Kconfig.L610.ngpl  Kconfig.L718  Kconfig.L718.ngpl  Kconfig.M8910DL  Kconfig.M8910DL.ngpl  Kconfig.N720  Kconfig.N720.eth  Kconfig.N720.eth.ngpl  Kconfig.N720.ngpl  Kconfig.N720.option  Kconfig.N720.option.ngpl  ftpupload.c  readme_Air720SL.txt  readme_L610.txt  readme_L718.txt  readme_N720.txt  test_dial_Air720SL.c  test_dial_L610.c  test_dial_L718.c  test_dial_M8910DL.c  test_dial_N720.c  test_ecm.c  test_ethernet.c  test_openrtos.c
project/test_usbd_ncm/: CMakeLists.txt  Kconfig  test_usbd_ncm description.docx  test_usbd_ncm.c
project/test_usbhcc/: CMakeLists.txt  Kconfig  Kconfig.hid.device  Kconfig.hid.host  Kconfig.sd.972  Kconfig.usbd.mst  Kconfig.usbh.acm  Kconfig.usbh.mst  test_card.c  test_usb_hid_device.c  test_usb_hid_host.c  test_usb_mst.c  test_usbd_acm.c  test_usbd_mst.c  test_usbh_acm.c  usbd - cdcacm.docx  usbh - cdcacm.docx
project/test_wifi_sdio/: CMakeLists.txt  Kconfig
project/test_wifi_sdio/RTL/: basic_func_main.c  dns_main.c  iperf_main.c  ping_main.c  socket_main.c  test_config.h  test_wifi_ngpl_lwip.c
sdk/driver/hdmirx/: CMakeLists.txt  mmp_hdmirx.c
sdk/driver/hdmirx/it66021/: IO.c  Remote.c  Utility.c  edid.c  it6602_interface.c  it660x.c  it660x_cec.c
sdk/driver/hdmirx/it6802/: it680x.c  it680x_interface.c
sdk/driver/itv/: CMakeLists.txt
sdk/driver/itv/it970/: itv.c  itv_iptv.c
sdk/driver/m2d/: CMakeLists.txt
sdk/driver/m2d/it970/: driver.c  driver.h  hw.c  surface.c
sdk/driver/mt7682/: CMakeLists.txt  hal_platform.h  hal_sdio.h  hal_sdio_internal.c  mt7682.h  sdio_hal.c  sdio_host_rw_test.c  sdio_io.h  sdio_main.c  sdio_reg.h  wfcm_sdio.c  wfcm_sdio.h  wifi_host_os_api.c  wifi_host_os_api.h  wifi_stub.c  wifi_stub.h
sdk/driver/risc2/: CMakeLists.txt
sdk/driver/risc2/swIRRx/: CMakeLists.txt  swIRRx.c
sdk/driver/video_encoder/: CMakeLists.txt  video_encoder_flower.c  video_encoder_iptv.c  video_encoder_it970.c
sdk/driver/wifi_ftv/: CMakeLists.txt
sdk/driver/wifi_ftv/core/: rtw_cmd.c  rtw_debug.c  rtw_ioctl_set.c  rtw_recv.c  rtw_sta_mgt.c  rtw_wlan_util.c  rtw_xmit.c
sdk/driver/wifi_ftv/core/efuse/: rtw_efuse.c
sdk/driver/wifi_ftv/hal/: hal_com.c
sdk/driver/wifi_ftv/hal/hal_hci/: hal_usb.c
sdk/driver/wifi_ftv/hal/phydm/: phydm_beamforming.h  phydm_types.h
sdk/driver/wifi_ftv/hal/rtl8188f/: rtl8188f_dm.c  rtl8188f_hal_init.c
sdk/driver/wifi_ftv/include/: autoconf.h  basic_types.h  drv_types_linux.h  hal_data.h  ieee80211.h  if_ether.h  ip.h  osdep_service.h  osdep_service_bsd.h  osdep_service_linux.h  rtl8188f_hal.h  rtw_debug.h  rtw_mp.h  rtw_recv.h  wlan_bssdef.h
sdk/driver/wifi_ftv/include/byteorder/: generic.h  little_endian.h
sdk/driver/wifi_ftv/include/ports/: ieee80211_radiotap.h  ite_ioctl.h  ite_ndis.h  ite_os.h  ite_port.h  ite_skbuf.h  ite_timer.h  ite_util.h  iw_handler.h  (+2 more)
sdk/driver/wifi_ftv/os_dep/: osdep_service.c
sdk/risc2/swIRRx/: CMakeLists.txt  main.c
sdk/share/bcg729/: CMakeLists.txt  Makefile.in
sdk/share/flower/: CMakeLists.txt  filter_des.c  filter_tcp.c  filter_udp.c  flower_stream.c  ite_queue.c
sdk/share/flower/audio/: Faec.c  Fcastor3snd.c  Fcmerge.c  Fequalizer.c  Ffileplay.c  Ffileplaymgr.c  Fhalfduplex.c  Fresample.c  Fstreammgr.c  Fulaw.c  Fvoid.c  asrfilterflow.c  audiofilterflow.c  audioqueue.c  volumeapi.c
sdk/share/flower/video/: filter_capture.c  filter_display.c  filter_displayosd.c  filter_h264dec.c  filter_h264enc.c  filter_ipcam.c  filter_isp.c  filter_qrscanner.c  filter_rec_avi.c
sdk/share/tuya_cloud/: CMakeLists.txt  tuya_ipc_doorbell_demo.c  tuya_ipc_dp_handler.c  tuya_ipc_dp_utils.c  tuya_ipc_media_demo.c  tuya_ipc_sd_demo.c  tuya_ipc_system_control_demo.c  tuya_ipc_wifi_demo.c  tuya_ipc_wired_demo.c
sdk/share/tuya_sys/: CMakeLists.txt  adapter_platform.c  tuya_ipc_motion_detect_demo.c  tuya_ipc_sd_demo.c
sdk/share/tuya_sys/driver/: tuya_hal_rtc.c  tuya_hal_storge.c  tuya_hal_wifi.c
sdk/share/tuya_sys/system/: tuya_hal_fs.c  tuya_hal_memory.c  tuya_hal_mutex.c  tuya_hal_network.c  tuya_hal_output.c  tuya_hal_p2p_platform_net.c  tuya_hal_semaphore.c  tuya_hal_system.c  tuya_hal_system_internal.h  tuya_hal_thread.c
(+1929 files in other folders)
